--- a/VirtualDestopCycle/App.config
+++ b/VirtualDestopCycle/App.config
@@ -15,8 +15,9 @@
             </setting>
             <setting name="DesktopBackgroundFiles" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+                  <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                      xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                  </ArrayOfString>
                 </value>
             </setting>
         </VirtualDesktopManager.Properties.Settings>
